# mustafaozer

./: .gitignore  README.md  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
about/: flexblocks.py  models.py
about/migrations/: 0001_initial.py  0002_create_aboutpage.txt
blog/: models.py  signals.py  wagtail_hooks.py
blog/migrations/: 0001_initial.py  0002_create_blogindexpage.txt  0003_create_categoryindexpage.txt  0004_create_tagindexpage.txt
blog/templatetags/: blog_tags.py
config/: urls.py  urls_1.py
config/settings/: base.py  dev.py
config/templates/: base.html  base_1.txt  footer.html  header.html
contact/: forms.py  models.py  wagtail_hooks.py
contact/migrations/: 0001_initial.py
flex/: flexblocks.py  models.py
flex/migrations/: 0001_initial.py
footer/: models.py  translation.py  wagtail_hooks.py
footer/migrations/: 0001_initial.py
footer/templatetags/: footer_tags.py
header/: apps.py  models.py  wagtail_hooks.py
header/migrations/: 0001_initial.py
header/templatetags/: header_footer_tags_1.txt  header_tags.py
home/: flexblocks.py  models.py
home/migrations/: 0001_initial.py  0002_create_homepage.txt  0002_remove_homepage.py  9001_create_homepage.txt
legal/: models.py
legal/migrations/: 0001_initial.py
menu/: models.py  wagtail_hooks.py
menu/templatetags/: menu_tags.py
site_settings/: apps.py  models.py  models_1.txt  wagtail_hooks.py
subscribe/: apps.py  forms.py  models.py  wagtail_hooks.py
user/: forms.py  models.py  signals.py  urls.py  views.py
(+68 files in other folders)
