[project]
name = "medic"
description = ""
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Mustafa Ozer", email = "mustafa.ozer@cento.com.tr" }]
license = { text = "MIT License" }

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.pylint.format]
max-line-length = 100

[tool.isort]
line_length = 100
profile = "black"
